changed thesis chapter to allow for the modification of shortened title

--- a/ECLSA.tex
+++ b/ECLSA.tex
@@ -1,1 +1,1 @@
-\thesischapter{Extracting a Clause Learning SAT Algorithm}
+\thesischapter{Extracting a Clause Learning SAT Algorithm}{Extracting a Clause Learning SAT Algorithm}
