--- a/minlogcdcl.tex
+++ b/minlogcdcl.tex
@@ -1,2 +1,2 @@
-\thesischapter{Formalising and Extracting a Conflict Driven Clause Learning SAT Algorithm in the Minlog System}
+\thesischapter{Formalising and Extracting a Conflict Driven Clause Learning SAT Algorithm in the Minlog System}{Formalising and Extracting a CDCL SAT Algorithm in Minlog}
 
