--- a/Main.tex
+++ b/Main.tex
@@ -45,7 +45,7 @@
 
 \setlength{\headheight}{15pt} 
 
-\newcommand{\thesischapter}[1]{\chapter{#1}\minitoc}
+\newcommand{\thesischapter}[2]{\chapter[#2]{#1}\minitoc}
 
 \usepackage{stmaryrd, hyphenat}
 \usepackage{graphicx}
