--- a/Maude.tex
+++ b/Maude.tex
@@ -1,6 +1,6 @@
 \newcommand{\rtmaude}{Real Time Maude}
 
-\thesischapter{The Modelling of the European Rail Traffic Management System Using Real Time Maude}
+\thesischapter{The Modelling of the European Rail Traffic Management System Using Real Time Maude}{The Modelling of ERTMS Using Real Time Maude}
 
 In the following we present the Maude \cite{MC03,Maude} and Real Time Maude \cite{PO02,PO04,RTMaude} tools and describe how they can be used model the ERTMS system (See chapter \ref{chapter:ERTMS}).   We begin by giving a general introduction to Maude and Real Time Maude and then describe how each of the 3 subsystems (trains, the interlocking and the RBC) are specified following the hybrid automata formalisation found in chapter \ref{chap:hybrid}. Each of these individual components are modelled using object oriented specification. We define classes representing each of the subsystems and then rewrite rules are used to give objects from these classses behaviour. The  built-in message construct of the Real Time Maude system are used to define communication between the subsystems.
 
@@ -236,7 +236,7 @@ To model communicating processes Real Time Maude uses a messages construct:
 \verb|msgs M1 ... Mn : Sort-1 ... Sort-n -> Msg . | 
 \end{center}
 
-The message construct acts as a container for data being pased between different communicating sub systems. Rewriting rules are used to capture the behaviour of sending and receiving messages between different objects.
+The message construct acts as a container for data being passed between different communicating sub systems. Rewriting rules are used to capture the behaviour of sending and receiving messages between different objects.
 
 \subsubsection*{Configurations in Real Time Maude}
 Objects and messages in a specification are given a sort of \texttt{Configuration} which is a subsort of type \texttt{System}. The composition operation for configurations allows for a combination of objects and messages to form new configurations. This composition operation is also commutative meaning that the order of messages and objects in any configuration is ignored. This allows for more generalised rewriting rules in an object oriented specification that speak about specific objects and messages that are part of some bigger configuration as the order does not affect the firing of the rule.
@@ -254,7 +254,7 @@ mod CONFIGURATION is
 \end{lstlisting}
 
 \subsubsection*{Example Object Oriented Specification}
-The following is an example consisting of two classes of object which serves to demonstrate some of the advantages of object oriented specification as well as some of the pit falls. The first is the Counter class which defines objects that count modulo 500 and transmit a message containing the current count. The second is the Reader class defining objects that read the messages produced by the Counter class. 
+The following is an example consisting of two classes of object which serves to demonstrate some of the advantages of object oriented specification as well as some of the pit falls. The first is the Counter class which defines objects that counts modulo 500 and transmits a message containing the current count. The second is the Reader class defining objects that read the messages produced by the Counter class. 
 
 \begin{lstlisting}[caption = Example object oriented specification, label = code:rtmaudeexample]
 (tomod EXAMPLE1 is protecting NAT-TIME-DOMAIN .
@@ -272,7 +272,8 @@ The following is an example consisting of two classes of object which serves to 
   rl [readCount] : {msgCount(N) < O : Reader | > REST} => 
   {< O : Reader | count : N > REST}  . 
 endtom)
-\end{lstlisting}
+\end{lstlisting} 
+We see in the above example several instances of objects being used in rewriting rules. The object < O : Counter | count : N > can be read as an object with an identifier O of class Counter with one attribute count which contains a value N.
 
 We can execute a system consisting of a Counter  and a Reader object for 2 times steps using the following command:
 \begin{center}
@@ -293,7 +294,8 @@ Result ClockedSystem :
   {< myReader : Reader | count : 2 > < myCounter : Counter | count : 2 >} in time 2
 \end{lstlisting}
 
-The Maude system rewrites the initial state of the system into the resulting state however that does not mean that this is the only reachable state. This set has some non-determinism in that we do not force the messages to be read immediately and the rewriting equations could be applied in any order. There is a reachable state in time 2 in which both of the messages have not been read meaning that either of them could be read in any order resulting in  . 
+The Maude system rewrites the initial state of the system into the resulting state however that does not mean that this is the only reachable state. This set has some non-determinism in that we do not force the messages to be read immediately and the rewriting equations could be applied in any order. There is a reachable state in time 2 in which both of the messages have not been read and following this either of them could be read in any order resulting in a possibly undesireable state. This also means that there are several states that are reachable depending on some non-deterministic choice causing state space explosion.
+
 The following are some states reachable in time 2.
 
 \begin{lstlisting}[caption = Some of the states reachable by rewriting EXAMPLE1 in two time steps, label = code:reachst ]
@@ -304,7 +306,7 @@ The following are some states reachable in time 2.
 {msgCount(2)< myReader : Reader | count : 1 > < myCounter : Counter | count : 2 >}
 \end{lstlisting}
 
-\emph{Non-determinism} should be avoided unless it is really is a property you want in a model. One way to remove some of these reachable states is to make the variable \texttt{REST} of sort \texttt{ObjectConfiguration}. This forces objects of the Reader class to read messages after each incrementation of time. If we make this modification to the specification then the following states, from code listing \ref{code:reachst}, are reachable in time 2.
+\emph{Non-determinism} should be avoided unless it is really a property you want in a model. One way to remove some of these reachable states is to make the variable \texttt{REST} of sort \texttt{ObjectConfiguration}. This forces objects of the Reader class to read messages after each incrementation of time. If we make this modification to the specification then the following states, from code listing \ref{code:reachst}, are reachable in time 2. All of these states contain at most one message that has yet to be read and do not represent a situation where the counters have become out of sync.
 \medskip
 \begin{lstlisting}[caption = States reachable by the modified EXAMPLE1 in two time steps]
 {< myReader : Reader | count : 2 > < myCounter : Counter | count : 2 >}
@@ -314,11 +316,11 @@ The following are some states reachable in time 2.
 \end{lstlisting}
 
 \section{Modelling the European Rail Traffic Management System}
-In the following we shall give an overview of the specifications used to model the ERTMS system. We have used the Real Time Maude system in an object oriented fashion following the hybrid automata described in chapter \ref{chap:hybrid} to define one class for each of the 3 hybrid automata. Time has been modelled by the use of a function $\delta$ that distributes the transition of time over objects in the system. Rewriting rules are then applied to $\delta$ containing singleton objects to give each individual object its behaviour. We attempt to remove as much non-determinism from the model as possible by forcing the ERTMS system to read all messages by the end of each time step and by preventing trains from making more than one movement authority request to the radio block processor in a given timestep.
+In the following we shall give an overview of the specifications used to model the ERTMS system. We have used the Real Time Maude system in an object oriented fashion following the hybrid automata described in chapter \ref{chap:hybrid} to define one class for each of the 3 hybrid automata. Time has been modelled by the use of a function $\mathrm{delta}$ that distributes the transition of time over objects in the system. Rewriting rules are then applied to $\mathrm{delta}$ containing singleton objects to give each individual object its behaviour. We attempt to remove as much non-determinism from the model as possible by forcing the ERTMS system to read all messages by the end of each time step and by preventing trains from making more than one movement authority request to the radio block processor in a given timestep.
 
 
 \subsubsection*{Modelling the Transition of Time}
-In our previous Real Time Maude specifications we have had a rewrite rules that work on a specific object or state and increment time for the whole system. This presents a problem as we could have two objects that can both increment the time of the global system independently.  Since we are modelling a real life system all of the subsystems much be subjected to time in an equal manner. We need a way of incrementing the time of the whole global system and then distributing this increment of time amongst the objects of the system. To solve this problem we define operator $\delta$ which describes how distributed system evolves with time.
+In our previous Real Time Maude specifications we have had a rewrite rules that work on a specific object or state and increment time for the whole system. This presents a problem as we could have two objects that can both increment the time of the global system independently.  Since we are modelling a real life system all of the subsystems much be subjected to time in an equal manner. We need a way of incrementing the time of the whole global system and then distributing this increment of time amongst the objects of the system. To solve this problem we define operator $\mathrm{delta}$ which describes how distributed system evolves with time.
 
 \begin{lstlisting}[caption = The delta time transition operation, label = code:delta]
 op delta : Configuration -> Configuration [frozen] . 
@@ -329,7 +331,7 @@ rl [timetrans] : {OCREST} => {delta(OCREST)} in time 1 .
 rl [delta1] : delta(CON1 CON2) => delta(CON1)delta(CON2) .
 \end{lstlisting}
 
-The operation $\delta$ is frozen meaning that the configuration contained within will not be evaluated by the Maude until the $\delta$ operation has been evaluated. We only allow for time to be incremented on a global system containing an object configuration which cannot by definition contain any messages. This forces all messages sent in one time interval to be read during that interval. The delta1 rule distributes the delta operation over the constituent objects of a configuration until there are many deltas applied to configurations containing singleton objects. Each of these singleton objects has its own seperately defined behaviour for the delta operation that captures that transition of time for that object. This was inspired by  \cite{PO07} where a delta operation is used to distribute time over a distributed sensor network. 
+The operation $\mathrm{delta}$ is frozen meaning that the configuration contained within will not be evaluated by the Maude until the $\mathrm{delta}$ operation has been evaluated. We only allow for time to be incremented on a global system containing an object configuration which cannot by definition contain any messages. This forces all messages sent in one time interval to be read during that interval. The delta1 rule distributes the delta operation over the constituent objects of a configuration until there are many deltas applied to configurations containing singleton objects. Each of these singleton objects has its own seperately defined behaviour for the delta operation that captures that transition of time for that object. This was inspired by  \cite{PO07} where a delta operation is used to distribute time over a distributed sensor network. 
 
 \subsubsection*{Modelling Trains}
 We shall now describe the specification of trains. We define the Train class to have a state which like our hybrid automata can be in one of 4 possibilities, constant speed, accelerating, stopped and breaking. As well as the state it also has 6 fields of sort Nat representing the distance, speed, acceleration, movement authority,  current track segment and max speed.
