--- a/Hybridautomata.tex
+++ b/Hybridautomata.tex
@@ -237,23 +237,16 @@ We define a hybrid automaton $H_{T}$ as follows:
 \begin{itemize}
 	\item $event (Stop \, (EoA) \to Accelerating) := MA.TrainID.y$
 	\item $event (Braking \to Accelerating) := MA.TrainID.y$
-	\item $event(Full \, Speed \to Full \, Speed) := event(Braking \to Braking) := event(Accelerating \to Accelerating)  := l_{D \, div \, 50}.l_{(D \, div \, 50) +1}$
-\item $event(Full \, Speed \to Full \, Speed (2)) := event(Braking \to Braking (2)) := event(Accelerating \to Accelerating(2)) := Train.TrainID.Pos.D$
+	\item $event(Full \, Speed \to Full \, Speed) := event(Braking \to Braking)$ \\
+                  $:= event(Accelerating \to Accelerating)  := l_{D \, div \, 50}.l_{(D \, div \, 50) +1}$
+\item $event(Full \, Speed \to Full \, Speed (2)) := event(Braking \to Braking (2))$  \\
+        $:= event(Accelerating \to Accelerating(2)) := Train.TrainID.Pos.D$
 	\item $event(Accelerating \to Braking) = MA.Req.TrainID$
 	\item $event(Full \, Speed \to Braking) = MA.Req.TrainID$
 \end{itemize}
 
 \end{description}
 \end{mydef}
-\medskip
-\begin{myremark}[Train Movement Events]
-We use the following abbreviation to capture the two separate events and flow conditions for train movement in the automaton diagram:
-\begin{align*}
-\mathbf{train \, movement \, events} \, := \ &\mathbf{if} \ D \, mod \, 50 = 0 \\
-						&\mathbf{then} \ l_{D \, div \, 50}.l{D \, div \, 50 +1}, \\
-					        &Train.TrainID.Pos.D 
-\end{align*}
-\end{myremark}
 \medskip
 \begin{figure} [H]
 
@@ -315,6 +308,16 @@ We use the following abbreviation to capture the two separate events and flow co
 
 
 \end{figure}
+\medskip
+\begin{myremark}[Train Movement Events]
+We use the following abbreviation to capture the two separate events and flow conditions for train movement in the automaton diagram:
+\begin{align*}
+\mathbf{train \, movement \, events} \, := \ &\mathbf{if} \ D \, mod \, 50 = 0 \\
+						&\mathbf{then} \ l_{D \, div \, 50}.l{D \, div \, 50 +1}, \\
+					        &Train.TrainID.Pos.D 
+\end{align*}
+\end{myremark}
+
 
 \subsection*{Interlocking Automata}
 In the following we shall define a hybrid automaton that captures the behaviour of the solid state interlocking.  The automaton has 2 control modes, namely $Idle$ and $Response$, which capture that the interlocking is either idle or processing a response to a request.  The automaton has 5 boolean variables $\{ l_0, \ldots ,l_4 \}$ representing whether a track segment is occupied or not and a variable $ReqID$ which stores the last requested track segment. The intended meaning of $l_i = true$ is that the track is occupied.  When a request for a track segment is made that track segment is stored, then if the track freedom condition is met then a request is granted, otherwise it is denied. The event $l_x.l_{x+1}$ captures the movement of a train from one track segment to the next in both the interlocking automaton and the train automaton.
